--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,6 @@
 language: ruby
 bundler_args: --without dev
+script: bundle exec rake ci
 rvm:
   - 1.8.7
   - 1.9.2
@@ -8,6 +9,4 @@ rvm:
   - jruby-19mode
   - rbx-18mode
   - rbx-19mode
-  - ruby-head
-  - jruby-head
   - ree
