--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,8 @@ language: ruby
 bundler_args: --without dev
 script: bundle exec rake ci
 rvm:
-  - 1.8.7
-  - 1.9.2
   - 1.9.3
-  - jruby-18mode
+  - 2.0.0
+  - 2.1
   - jruby-19mode
-  - rbx-18mode
-  - rbx-19mode
-  - ree
+  - rbx-2
