--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ script: bundle exec rake ci
 rvm:
   - 1.9.3
   - 2.0.0
-  - 2.1
-  - jruby-19mode
-  - rbx-2
+  - 2.1.5
+  - 2.2.0
+  - jruby-1.7.9
+  - rbx-2.4.1
